Bug 273466 Can't drag favicon from url bar into bookmark sidebar to create bookmark p=jag/me r=bsmedberg